--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,14 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# KSP incremental processing
+ksp.incremental=true
+ksp.incremental.log=true
+
+# Gradle parallel build
+org.gradle.parallel=true
+org.gradle.caching=true
+
+# Kotlin incremental compilation
+kotlin.incremental=true
